vest-dsl/test/bad/const_array_type_mismatch.vest
const BAR: [u16; 4] = "abcd"
